frontend/test/should_pass/exectype_VarPredicate.grg
using exectype;

rule r
{
	modify  {
		exec(x:boolean=true && x);
	}
}