frontend/test/should_fail/exectype_VarPredicate.grg
using exectype;

rule r
{
	modify  {
		exec(x:int=42 && x);
	}
}